# ckb-pq-dillithium-

./: Cargo.toml  Makefile  README.md
contracts/dillithium-lock/: Makefile
contracts/dillithium-lock/src/: main.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: build.rs  main.rs
deployment/: scripts.json
deployment/devnet/hello-world/: deployment.toml
deployment/devnet/hello-world/migrations/: 2026-06-03-140357.json
deployment/testnet/hello-world/: deployment.toml
deployment/testnet/hello-world/migrations/: 2026-06-03-150359.json
patches/bytes/src/: loom.rs
sdk/: README.md  package.json  tsconfig.json
sdk/examples/: generate-keypair.mjs
sdk/scripts/: copy-wasm.mjs
sdk/src/: address.ts  cli.ts  constants.ts  crypto.ts  hash.ts  index.ts  lock.ts  types.ts  util.ts  wallet.ts  witness.ts
sdk/test/: sdk.test.ts
