[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "1.1", features = ["dummy-atomic", "calc-hash"] }
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-65"] }
blake2b-ref = { version = "0.3", default-features = false }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]